<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_proj"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wqz.vistamanager.AddProjActivity">

    <com.wqz.view.TitleBar
        android:id="@+id/add_proj_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_add_proj_title"
        android:layout_below="@+id/add_proj_title_bar"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_add_proj_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_round_corner"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/et_add_proj_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_round_corner"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:hint="@string/content"/>

        <Button
            android:id="@+id/btn_add_proj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_proj"
            android:textColor="@color/colorIOSBlue"
            android:background="@drawable/white_round_corner"/>

    </LinearLayout>
</RelativeLayout>
